# Rust-CRUD

./: Cargo.toml  Dockerfile  README.md
src/: anilist.rs  channel.rs  channels.rs  main.rs
src/util/: error_handling.rs
