[package]
name = "rust-crud-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
deadpool-postgres = "0.14.0"
serde = { version = "1.0.208", features = ["derive"] }
tokio = { version = "1.39.3", features = ["full"] }
tokio-postgres = "0.7.11"
tracing-subscriber = "0.3.18"

[dev-dependencies]
http-body-util = "0.1.2"
rand = "0.8.5"
serde_json = "1.0.125"
tower = { version = "0.5.0", features = ["util"]}
